--- a/html/index.html
+++ b/html/index.html
@@ -41,8 +41,53 @@
         <p>Welcome</p>
     </main>
 
+    <script>
+        const list = document.createElement('ul')
+        document.body.appendChild(list)
+
+        const textArea = document.createElement('textarea')
+        document.body.appendChild(textarea)
+
+        const button = document.createElement('button')
+        button.textContent = 'Send'
+        document.body.appendChild(button)
+
+        async function getMessages(){
+            list.innerHTML = ''
+            //const response = await fetch('arpanetos.lol/lab5/19566/html')
+            const response = await fetch('C:/Users/WMGWW/Documents/DinaDocs/Uni/2024-S1/SistemasWeb/Lab5JSOnly/Lab5JSOnly/html/index.html/messages')
+            const messages = await response.json()
+
+            messages.array.forEach(message => {
+                const item = document.createElement('li')
+                item.textContent = message.username + ": " + message.message
+                list.appendChild(item)                
+            });
+        
+        }
+
+        async function postMessage(){
+            const username = "UserName"
+            const message = textArea.value
+            await fetch('C:/Users/WMGWW/Documents/DinaDocs/Uni/2024-S1/SistemasWeb/Lab5JSOnly/Lab5JSOnly/html/index.html/messages', {
+                method: 'POST',
+                header: {
+                    'Content-Type': 'application/json',
+                }, 
+                body: JSON.stringify({ username, message}),
+
+            })
+            textArea.value = ''
+            getMessages()
+
+        }
+
+        button.addEventListener('click', postMessage)
+        
+    </script>
+
     <footer>
-        <p>&copy; Arpanetos</p>
+        <p>&copy; Arpanetos.lol</p>
     </footer>
 </body>
 </html>
