converted html to javascript

--- a/html/index.html
+++ b/html/index.html
@@ -1,93 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Client</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Arpanetos Chat</h1>
-    </header>
-
-    <main>
-        <h2>Arpanetos Chat</h2>
-        <p>Welcome</p>
-    </main>
-
-    <script>
-        const list = document.createElement('ul')
-        document.body.appendChild(list)
-
-        const textArea = document.createElement('textarea')
-        document.body.appendChild(textarea)
-
-        const button = document.createElement('button')
-        button.textContent = 'Send'
-        document.body.appendChild(button)
-
-        async function getMessages(){
-            list.innerHTML = ''
-            //const response = await fetch('arpanetos.lol/lab5/19566/html')
-            const response = await fetch('C:/Users/WMGWW/Documents/DinaDocs/Uni/2024-S1/SistemasWeb/Lab5JSOnly/Lab5JSOnly/html/index.html/messages')
-            const messages = await response.json()
-
-            messages.array.forEach(message => {
-                const item = document.createElement('li')
-                item.textContent = message.username + ": " + message.message
-                list.appendChild(item)                
-            });
-        
-        }
-
-        async function postMessage(){
-            const username = "UserName"
-            const message = textArea.value
-            await fetch('C:/Users/WMGWW/Documents/DinaDocs/Uni/2024-S1/SistemasWeb/Lab5JSOnly/Lab5JSOnly/html/index.html/messages', {
-                method: 'POST',
-                header: {
-                    'Content-Type': 'application/json',
-                }, 
-                body: JSON.stringify({ username, message}),
-
-            })
-            textArea.value = ''
-            getMessages()
-
-        }
-
-        button.addEventListener('click', postMessage)
-        
-    </script>
-
-    <footer>
-        <p>&copy; Arpanetos.lol</p>
-    </footer>
-</body>
+<html>
+  <head>
+  </head>
+  <body>
+    <script type="application/javascript" src="../js/javascript.js"></script>
+  </body>
 </html>
